      Brulebois.  (Closes: #460168)
    + [RA] Versioned Python dependencies satisfy a Python debian/rules
      requirement.  Add a separate tag for Python build dependencies to
      explain the dependency possibilities.  Ignore dh_python if
      debian/pyversion or a Python-Version control field are present.
      Thanks, Loïc Minier.  (Closes: #460625)
  * checks/files.desc:
    + [RA] In many of the long descriptions for symlink-related tags,
      mention that running dh_link will fix symlink problems.
  * checks/infofiles:
    + [RA] Don't issue unknown-intepreter for maintainer scripts with
      weird interpreters.  checks/scripts already handles this and the tag
      wasn't defined.  Thanks, Thijs Kinkhorst.  (Closes: #460964)
    + [RA] Fix Perl warnings given a zero-byte maintainer script.  Thanks,
      Thijs Kinkhorst.  (Closes: #460966)
  * checks/init.d{.desc,}:
    + [RA] Downgrade a missing LSB Short-Description keyword to info since
      it's not required for functionality.  Thanks, Petter Reinholdtsen.
      (Closes: #460499)
  * checks/manpages{.desc,}:
    + [RA] Make hyphen-used-as-minus-sign more conservative to avoid false
      positives with non-ASCII text and catch hyphens at the start of
      lines.  Thanks, Michal Čihař.  (Closes: #459871)
    + [CW] Use man's new --warnings option to catch use of undefined
      strings, macros, or diversions in manual pages, which usually indicate
      mistaken use of "." or "'" at the start of a line. Requires man-db >=
      2.5.1-1.
  * checks/menu-format:
    + [RA] Avoid a Perl warning for desktop entries without Exec.
    + [RA] Fix a bug that prevented Exec keys in desktop files from being
      checked at all.  Thanks, Raphael Geissert.  (Closes: #462601)
    + [RA] Exempt packages providing the su wrappers from the check for
      using su-to-root.  Thanks, Raphael Geissert.
  * checks/menus:
    + [RA] Don't issue unknown-interpreter for maintainer scripts with