@@ -131,6 +131,9 @@ binary-indep:
 	install -d debian/tmp/usr/lib/sgml
 	touch debian/tmp/usr/lib/sgml/package
 
+	install -d debian/tmp/usr/share/gnome/apps/System
+	touch debian/tmp/usr/share/gnome/apps/System/foo.desktop
+
 	ln -s '../filenames/doc/version6.txt.gz' debian/tmp/usr/share/doc/filenames/version.txt.gz
 	ln -s ../../share/symlink debian/tmp/usr/lib/filenames/symlink1ok
 	ln -s ../../../etc/symlink debian/tmp/usr/lib/filenames/symlink1wrong
@@ -149,6 +152,24 @@ binary-indep:
 	ln -s . debian/tmp/usr/lib/filenames/symlink6ok+warn
 	ln -s / debian/tmp/usr/lib/filenames/symlink7ok+warn
 	ln -s ../../.. debian/tmp/usr/lib/filenames/symlink10wrong
+
+# devhelp tests.  Files in /usr/share/gtk-doc/html or /usr/share/devhelp/books
+# are okay.  Files elsewhere are okay iff their parent path is symlinked into
+# one of those paths.
+	install -d debian/tmp/usr/share/devhelp/books/filenames
+	echo 'Not really XML' > debian/tmp/usr/share/devhelp/books/filenames/a.devhelp
+	echo 'Not really XML' > debian/tmp/usr/share/devhelp/books/filenames/.devhelp2
+	gzip -9 debian/tmp/usr/share/devhelp/books/filenames/.devhelp2
+	install -d debian/tmp/usr/share/gtk-doc/html/filenames
+	echo 'Not really XML' > debian/tmp/usr/share/gtk-doc/html/filenames/b.devhelp
+	gzip -9 debian/tmp/usr/share/gtk-doc/html/filenames/b.devhelp
+	install -d debian/tmp/usr/share/doc/filenames/good-devhelp
+	echo 'Not really XML' > debian/tmp/usr/share/doc/filenames/good-devhelp/.devhelp2
+	install -d debian/tmp/usr/share/doc/filenames/bad-devhelp
+	echo 'Not really XML' > debian/tmp/usr/share/doc/filenames/bad-devhelp/c.devhelp
+	gzip -9 debian/tmp/usr/share/doc/filenames/bad-devhelp/c.devhelp
+	ln -s ../../doc/filenames/good-devhelp debian/tmp/usr/share/gtk-doc/html/good
+	ln -s ../doc/filenames/bad-devhelp debian/tmp/usr/share/gtk-doc/html/bad
 
 	dpkg-gencontrol -pfilenames -Pdebian/tmp
 	dpkg --build debian/tmp ..
