@@ -20,9 +20,15 @@ lintian (1.23.43) UNRELEASED; urgency=low
       explain the dependency possibilities.  Ignore dh_python if
       debian/pyversion or a Python-Version control field are present.
       Thanks, Loïc Minier.  (Closes: #460625)
-  * checks/files.desc:
+  * checks/files{.desc,}:
     + [RA] In many of the long descriptions for symlink-related tags,
       mention that running dh_link will fix symlink problems.
+    + [RA] Fix a long-standing error in the regex checking for *.desktop
+      files in /usr/share/gnome/apps that caused the tag to never be
+      issued.  Remove the check for /usr/share/applnk, since obsolete or
+      not KDE appears to actively use it still.
+    + [RA] Check for *.devhelp{2,} files not linked into devhelp's search
+      path.  Based on a patch by Bradley Smith.  (Closes: #273309)
   * checks/infofiles:
     + [RA] Don't issue unknown-intepreter for maintainer scripts with
       weird interpreters.  checks/scripts already handles this and the tag
